feat(module): 模块查询配置支持设置排除字段
Signed-off-by: 汪世胤 <wangshiyin@hinadt.com>